--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,6 @@
-Wassup Playas?!
+<div class="account">
+<h2>Do you have an account?</h2>
+<li><button><a href="/login">yes</a></button></li>
+<li><button><a href="/signup">no</a></button></li>
+</div>
+
